Split FPN in separate outputs.

--- a/examples/ResNet50RetinaNet.ipynb
+++ b/examples/ResNet50RetinaNet.ipynb
@@ -140,7 +140,8 @@
     "\n",
     "# process image\n",
     "start = time.time()\n",
-    "_, _, detections = model.predict_on_batch(np.expand_dims(image, axis=0))\n",
+    "outputs = model.predict_on_batch(np.expand_dims(image, axis=0))\n",
+    "detections = outputs[-1]\n",
     "print(\"processing time: \", time.time() - start)\n",
     "\n",
     "# compute predicted labels and scores\n",
